--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,48 @@ services:
     restart: always
     ports:
       - 8080:8080
+
+
+
+version: "3.9"
+
+services:
+  mysql:
+    image: mariadb:10.8.3
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: toucantestdb
+      MYSQL_USER: root
+      MYSQL_PASSWORD: root
+    ports:
+      - 3306:3306
+    volumes:
+      - mysql-data:/var/lib/mysql
+
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8080:8080
+
+  app:
+    image: php:8.1-apache
+    restart: always
+    volumes:
+      - .:/var/www/html
+    ports:
+      - 80:80
+    environment:
+      DB_CONNECTION: mysql
+      DB_HOST: mysql
+      DB_PORT: 3306
+      DB_DATABASE: laravel
+      DB_USERNAME: laravel
+      DB_PASSWORD: secret
+    depends_on:
+      - mysql
+
+volumes:
+  mysql-data:
